# preppilot

./: README.md  main.py  preppilot_config.yaml  pyproject.toml  test_gemini.py
agents/: mcq_master.py  mock_tester.py  syllabus_reader.py  topic_summarizer.py
results/: Fahad Ghouri_8356ef_20250329_202539_pipeline.json  fahad_b03965_20250329_215523_pipeline.json  mock_exam.json
src/: web_app.py
src/preppilot/: config_loader.py  crew.py
src/preppilot/config/: agents.yaml  tasks.yaml
src/preppilot/mcp/: context_config.yaml  protocol.py
tasks/: study_flow.py
tests/: test_mcp_protocol.py  test_syllabus_reader.py
web/: mcp_editor.py  preppilot_ui.py
